--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "CI=false && react-scripts build",
+    "buildGhPages": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy" : "npm run build",
+    "predeploy" : "npm run buildGhPages",
     "deploy" : "gh-pages -d build"
   },
   "eslintConfig": {
