--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy" : "npm run buildGhPages",
-    "deploy" : "gh-pages -d build"
+    "deployGhPages" : "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
